--- a/motobudzetapi/src/main/resources/static/css/navBarMainContainerLogoAdvertisement.css
+++ b/motobudzetapi/src/main/resources/static/css/navBarMainContainerLogoAdvertisement.css
@@ -376,3 +376,22 @@ header {
 #userLogoutButton:hover .logout-text {
     display: block !important;
 }
+
+.advertisementInfoIconContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    text-align: center;
+    margin-right: 30px;
+    color: white;
+}
+
+.descriptionDivLabel {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: darkgoldenrod;
+    width: 1300px;
+    text-align: center;
+    font-size: 18px;
+}
