--- a/motobudzetapi/src/main/resources/static/css/searchForm.css
+++ b/motobudzetapi/src/main/resources/static/css/searchForm.css
@@ -117,3 +117,23 @@ input[type=number] {
     margin-right: 10px;
     width: 13%;
 }
+
+.actualSortParamTextDiv {
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.paginationButtonDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: top 0.3s ease-in-out;
+    width: 7%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
