--- a/motobudzetapi/src/main/resources/templates/index.html
+++ b/motobudzetapi/src/main/resources/templates/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/zoom.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/test.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/lastUploaded.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/neontest.css}" />
     <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
     <script type="text/javascript" th:src="@{/js/last-uploaded.js}" ></script>
