font style changed on whole document, some css changes jib maven auth params as variables, neon price text improvements,

--- a/motobudzetapi/src/main/resources/static/css/neontest.css
+++ b/motobudzetapi/src/main/resources/static/css/neontest.css
@@ -35,6 +35,7 @@
     /*background: linear-gradient(45deg, #FF1493, #00CED1, #FFD700, #00CED1, #FF1493);*/
     /*background: linear-gradient(45deg, darkgoldenrod, #FF1493, #00CED1, #FFD700, #00CED1, moccasin);*/
     background: linear-gradient(45deg, darkgoldenrod, darkgoldenrod, #FFD700, #FFD700, moccasin);
+    /*background: linear-gradient(45deg, white, white, white, white, white);*/
 
 
 
