--- a/motobudzetapi/src/main/resources/static/css/zoom.css
+++ b/motobudzetapi/src/main/resources/static/css/zoom.css
@@ -68,10 +68,10 @@
 .dark-mode #container-main img {
     filter: invert(1);
 }
-
-/*.dark-mode #container-main .ph-image {*/
-/*    filter: invert(1);*/
-/*}*/
+.dark-mode #container-main .gradient {
+    filter: invert(1);
+    background: linear-gradient(45deg, hsla(0, 0%, 0%, 1), hsla(0, 0%, 0%, 0.8), hsla(0, 0%, 0%, 0.6), hsla(0, 0%, 0%, 0.4), hsla(0, 0%, 0%, 0.2));
+}
 
 .search-result-image {
     /*box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0;*/
