--- a/motobudzetapi/src/main/resources/static/css/lastUploaded.css
+++ b/motobudzetapi/src/main/resources/static/css/lastUploaded.css
@@ -50,4 +50,18 @@
     visibility: hidden;
 }
 
+hr {
+    visibility: visible;
+    margin: 10px auto 0px;
+    width: 100%;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
+}
 
+@font-face {
+    font-family: 'Honk';
+    src: url('fonts/Honk-Regular-Font.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
